fix: positioning for small collapsed

--- a/src/components/ControlBar/ViewControlBar/styles/Content.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/Content.module.css
@@ -43,8 +43,7 @@
     }
 
     .container {
-        margin-bottom: var(--spacers-dp8);
-        margin-top: var(--spacers-dp8);
+        padding-bottom: 4px;
     }
 
     .expanded .chipsContainer .controls {
